# mush

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  architecture.md  deny.toml  flake.nix  from-codex.md  todo.md
.cargo/: config.toml
.config/: nextest.toml
crates/mush-agent/: Cargo.toml
crates/mush-agent/src/: agent_loop.rs  card.rs  display.rs  hooks.rs  lib.rs  response_cache.rs  tasks.rs  tool.rs  tool_grouping.rs  truncation.rs
crates/mush-agent/src/ipc/: listener.rs  mod.rs
crates/mush-ai/: Cargo.toml
crates/mush-ai/benches/: stream_hot_paths.rs
crates/mush-ai/src/: credentials.rs  env.rs  lib.rs  login.rs  models.rs  oauth.rs  private_io.rs  registry.rs  request_snapshot.rs  stream.rs  types.rs
crates/mush-ai/src/discovery/: anthropic.rs  cache.rs  codex.rs  merge.rs  mod.rs  openai.rs  openrouter.rs  orchestrate.rs
crates/mush-ai/src/oauth/: anthropic.rs  mod.rs  openai_codex.rs  openai_codex_server.rs  pkce.rs  store.rs  usage.rs
crates/mush-ai/src/providers/: anthropic.rs  bench_support.rs  mod.rs  openai.rs  openai_responses.rs  sse.rs
crates/mush-ai/src/types/: content.rs  messages.rs  mod.rs  model.rs  newtypes.rs
crates/mush-cli/: Cargo.toml
crates/mush-cli/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  setup.rs  timing.rs
crates/mush-eval/: Cargo.toml
crates/mush-eval/src/: collect.rs  lib.rs  main.rs
crates/mush-ext/: Cargo.toml
crates/mush-ext/src/: context.rs  frontmatter.rs  hook.rs  lib.rs  loader.rs  prompts.rs  rules.rs  skills.rs  types.rs
crates/mush-ext/src/context/: documents.rs  embedding.rs  mod.rs  search.rs
crates/mush-lsp/: Cargo.toml
crates/mush-lsp/src/: client.rs  discovery.rs  error.rs  lib.rs  registry.rs  tools.rs  transport.rs
crates/mush-mcp/: Cargo.toml
crates/mush-mcp/src/: config.rs  connection.rs  dynamic.rs  lib.rs  result.rs  tool.rs
crates/mush-session/: Cargo.toml
crates/mush-session/src/: compact.rs  conversation.rs  lib.rs  session.rs  store.rs  title.rs  tree.rs
crates/mush-tools/: Cargo.toml
crates/mush-tools/examples/: truncation_dump.rs
crates/mush-tools/src/: apply_patch.rs  background.rs  bash.rs  bash_status.rs  batch.rs  edit.rs  find.rs  glob.rs  grep.rs  lib.rs  ls.rs  notify_user.rs  read.rs  repo_map.rs  skills.rs  util.rs  web_fetch.rs  web_search.rs  write.rs
crates/mush-tools/tests/: truncation_audit.rs
crates/mush-treesitter/: Cargo.toml
crates/mush-treesitter/src/: chunking.rs  language.rs  lib.rs  parser.rs  queries.rs  references.rs  repo_map.rs  symbols.rs  watcher.rs
crates/mush-tui/: Cargo.toml
crates/mush-tui/benches/: render_hot_paths.rs
crates/mush-tui/src/: app.rs  app_event.rs  app_state.rs  at_template.rs  batch_output.rs  cache.rs  clipboard.rs  config_watcher.rs  conversation_display.rs  delegate.rs  display_types.rs  event_handler.rs  file_tracker.rs  fuzzy.rs  input.rs  input_buffer.rs  isolation.rs  keybinds.rs  lib.rs  login_picker.rs  markdown.rs  messaging.rs  model_picker.rs  notify.rs  pane.rs  path_utils.rs  runner.rs  runner_commands.rs  runner_input.rs  runner_panes.rs  runner_render.rs  runner_streams.rs  runner_terminal.rs  session_picker.rs  settings.rs  shared_state.rs  slash.rs  slash_menu.rs  streaming.rs  syntax.rs  (+4 more)
crates/mush-tui/src/runner/: caching_backend.rs  commands.rs  config.rs  diag.rs  input.rs  last_model.rs  looping.rs  mod.rs  panes.rs  render.rs  runtime.rs  streams.rs  terminal.rs  thinking_prefs.rs
crates/mush-tui/src/slash/: commands.rs  compaction.rs  mod.rs
crates/mush-tui/src/widgets/: ansi.rs  at_picker.rs  diff.rs  input_box.rs  login_picker.rs  message_list.rs  mod.rs  model_picker.rs  search_popup.rs  session_picker.rs  settings_menu.rs  slash_menu.rs  status_bar.rs  tab_bar.rs  tool_panels.rs  usage_bar.rs
crates/mush-tui/tests/: app_event_module.rs  app_state_module.rs  batch_output_module.rs  cache_module.rs  display_types_module.rs  input_buffer_module.rs  session_picker_module.rs  slash_menu_module.rs  slash_split_module.rs  streaming_module.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: config.md  internals.md  terminal.md  tools.md
nix/: config-schema.json  devshell.nix  module.nix  package.nix
