[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal crates
mush-ai = { path = "crates/mush-ai" }
mush-agent = { path = "crates/mush-agent" }
mush-tools = { path = "crates/mush-tools" }
mush-session = { path = "crates/mush-session" }
mush-ext = { path = "crates/mush-ext" }
mush-tui = { path = "crates/mush-tui" }

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# http + streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
color-eyre = "0.6"

# tui
ratatui = "0.29"
crossterm = "0.28"

# cli
clap = { version = "4", features = ["derive"] }

# file ops
ignore = "0.4"
globset = "0.4"

# encoding
base64 = "0.22"

# testing
pretty_assertions = "1"
tempfile = "3"
