[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal crates
mush-ai = { path = "crates/mush-ai" }
mush-agent = { path = "crates/mush-agent" }
mush-tools = { path = "crates/mush-tools" }
mush-session = { path = "crates/mush-session" }
mush-ext = { path = "crates/mush-ext" }
mush-mcp = { path = "crates/mush-mcp" }
mush-tui = { path = "crates/mush-tui" }

# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-stream = "0.3"

# http + streaming
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
# serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# derive helpers
derive_more = { version = "2.1", features = [
  "display",
  "from",
  "deref",
  "as_ref",
  "into",
] }

# error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
color-eyre = "0.6"

# tui
ratatui = "0.30"
crossterm = "0.29"

# cli
clap = { version = "4", features = ["derive"] }

# terminal
atty = "0.2"

# crypto + encoding
sha2 = "0.10"
getrandom = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
notify = "8"
urlencoding = "2"

# testing
pretty_assertions = "1"
tempfile = "3"
