[workspace]
resolver = "3"
members = ["crates/*"]
default-members = [
  "crates/mush-agent",
  "crates/mush-ai",
  "crates/mush-cli",
  "crates/mush-ext",
  "crates/mush-lsp",
  "crates/mush-mcp",
  "crates/mush-session",
  "crates/mush-tools",
  "crates/mush-treesitter",
  "crates/mush-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal crates
mush-ai = { path = "crates/mush-ai" }
mush-agent = { path = "crates/mush-agent" }
mush-tools = { path = "crates/mush-tools" }
mush-session = { path = "crates/mush-session" }
mush-ext = { path = "crates/mush-ext" }
mush-mcp = { path = "crates/mush-mcp" }
mush-tui = { path = "crates/mush-tui" }
mush-treesitter = { path = "crates/mush-treesitter" }
mush-lsp = { path = "crates/mush-lsp" }

# async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# http + streaming
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
# time
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "serde",
  "clock",
] }

# serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "3"
toml = "1.1"

# derive helpers
derive_more = { version = "2.1", features = [
  "display",
  "from",
  "deref",
  "as_ref",
  "into",
] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
color-eyre = "0.6"

# tui
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["osc52"] }

# cli
clap = { version = "4", features = ["derive", "env"] }

# terminal
atty = "0.2"

# parallelism
rayon = "1.11"

# crypto + encoding
sha2 = "0.11"
getrandom = "0.4"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
notify = "8"
urlencoding = "2"

# profiling
tracing-chrome = { version = "0.7", default-features = false }

# testing
pretty_assertions = "1"
tempfile = "3"
filetime = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = "line-tables-only"
strip = "none"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
