[package]
name = "mush-agent"
description = "agent loop, tool execution, and state management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mush-ai.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
