[package]
name = "mush-agent"
description = "agent loop, tool execution, and state management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mush-ai.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
