[package]
name = "mush-agent"
description = "agent loop, tool execution, and state management"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mush-ai.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-stream.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time", "net", "io-util"] }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
