[package]
name = "mush-ai"
description = "unified multi-provider LLM streaming API"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
async-stream.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
getrandom.workspace = true
base64.workspace = true
urlencoding.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
