[package]
name = "mush-ai"
description = "unified multi-provider LLM streaming API"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
derive_more.workspace = true
sha2.workspace = true
getrandom.workspace = true
base64.workspace = true
urlencoding.workspace = true
chrono.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
http = "1"
bytes = "1"

[[bench]]
name = "stream_hot_paths"
harness = false

[lints]
workspace = true
