[package]
name = "mush-ai"
description = "unified multi-provider LLM streaming API"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
derive_more.workspace = true
sha2.workspace = true
getrandom.workspace = true
base64.workspace = true
urlencoding.workspace = true
chrono.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
tokio.workspace = true
keyring-core.workspace = true

# platform-specific keyring stores. each only compiles on its target
# os, so the credentials module conditionally wires them in
[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store.workspace = true

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
http = "1"
bytes = "1"

[[bench]]
name = "stream_hot_paths"
harness = false

[lints]
workspace = true
