[package]
name = "mush-cli"
description = "the mush binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["embeddings"]
embeddings = ["mush-ext/embeddings"]

[[bin]]
name = "mush"
path = "src/main.rs"

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
mush-tools.workspace = true
mush-session.workspace = true
mush-ext.workspace = true
mush-mcp.workspace = true
mush-tui.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
color-eyre.workspace = true
toml.workspace = true
atty.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
