[package]
name = "mush-cli"
description = "the mush binary"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
embeddings = ["mush-ext/embeddings"]
tokio-console = ["dep:console-subscriber"]
profiling = ["dep:tracing-chrome"]

[[bin]]
name = "mush"
path = "src/main.rs"

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
mush-tools.workspace = true
mush-session.workspace = true
mush-ext.workspace = true
mush-mcp.workspace = true
mush-tui.workspace = true
mush-treesitter.workspace = true
mush-lsp.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
color-eyre.workspace = true
toml.workspace = true
atty.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
reqwest.workspace = true
console-subscriber = { version = "0.5", optional = true }
tracing-chrome = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
