[package]
name = "mush-ext"
description = "extension trait definitions and loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
