[package]
name = "mush-ext"
description = "extension trait definitions and loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
embeddings = ["dep:fastembed", "dep:hf-hub"]

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
mush-session.workspace = true
mush-treesitter.workspace = true
globset = "0.4"
thiserror.workspace = true
tracing.workspace = true
fastembed = { version = "5", optional = true }
hf-hub = { version = "0.4", optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

