[package]
name = "mush-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lsp-types = "0.97"
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
mush-treesitter.workspace = true
mush-agent.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
