[package]
name = "mush-mcp"
description = "MCP (Model Context Protocol) client for mush"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rmcp = { version = "1.5", default-features = false, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }

[dev-dependencies]
pretty_assertions.workspace = true
toml.workspace = true

[lints]
workspace = true
