[package]
name = "mush-session"
description = "session persistence, branching, and compaction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mush-ai.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
miette.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true
