[package]
name = "mush-session"
description = "session persistence, branching, and compaction"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mush-ai.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
