[package]
name = "mush-tools"
description = "built-in tools (read, write, edit, bash, grep, find, ls)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
tokio.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
