[package]
name = "mush-tools"
description = "built-in tools (read, write, edit, bash, grep, find, ls)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
futures.workspace = true
base64.workspace = true
tracing.workspace = true
thiserror.workspace = true
htmd = "0.5.0"
similar.workspace = true
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
