[package]
name = "mush-treesitter"
description = "tree-sitter integration: language detection, parsing, symbol extraction"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
tree-sitter = "0.26"
thiserror.workspace = true
rayon.workspace = true
tracing.workspace = true
ignore = "0.4"
notify.workspace = true
rustc-hash.workspace = true

# grammar crates (all optional, default-enabled)
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-yaml = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.5", optional = true }
tree-sitter-html = { version = "0.23", optional = true }
tree-sitter-css = { version = "0.25", optional = true }
tree-sitter-nix = { version = "0.3", optional = true }

[features]
default = ["all-languages"]
all-languages = [
  "lang-rust",
  "lang-python",
  "lang-javascript",
  "lang-typescript",
  "lang-go",
  "lang-c",
  "lang-cpp",
  "lang-java",
  "lang-bash",
  "lang-json",
  "lang-toml",
  "lang-yaml",
  "lang-markdown",
  "lang-html",
  "lang-css",
  "lang-nix",
]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-go = ["dep:tree-sitter-go"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-java = ["dep:tree-sitter-java"]
lang-bash = ["dep:tree-sitter-bash"]
lang-json = ["dep:tree-sitter-json"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-markdown = ["dep:tree-sitter-md"]
lang-html = ["dep:tree-sitter-html"]
lang-css = ["dep:tree-sitter-css"]
lang-nix = ["dep:tree-sitter-nix"]

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
filetime.workspace = true

[lints]
workspace = true
