[package]
name = "mush-tui"
description = "terminal UI for mush"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
mush-ai.workspace = true
mush-agent.workspace = true
mush-session.workspace = true
mush-ext.workspace = true
mush-tools.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
throbber-widgets-tui = { version = "0.11.0", default-features = false }
syntect = { version = "5.3.0", default-features = false, features = [
  "default-syntaxes",
  "default-themes",
  "regex-fancy",
] }
base64.workspace = true
image.workspace = true
notify.workspace = true
unicode-width.workspace = true
toml.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
ratatui-image = { version = "10.0.6", default-features = false, features = [
  "crossterm",
  "image-defaults",
] }

[dev-dependencies]
chrono.workspace = true
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "render_hot_paths"
harness = false

[lints]
workspace = true
